[package]
name = "tap_parser"
version = "0.1.0"
authors = ["traxys <quentin@familleboyer.net>"]
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0.159", features = ["derive"], optional = true }
thiserror = "1.0.40"

[dev-dependencies]
indoc = "2.0.1"
paste = "1.0.12"
serde_json = "1.0.95"

[[example]]
name = "json"
required-features = ["serde"]
